--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HULI</title>   
+        <title>HuliTeste</title>   
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">  
         <script src="js/jquery.min.js"></script>
